Update RaskolVaultCommand.java